--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "509c2e0f",
+   "id": "b249bb32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e666690",
+   "id": "6db7622f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67b1dee8",
+   "id": "ce5b4e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82893b5e",
+   "id": "701d974c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93c9d54",
+   "id": "1d1fcc6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,17 +57,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a9ab36",
+   "id": "e3191be0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker build -t ciao:mondo -f Dockerfile.train ."
+    "!docker build -t 049694889102.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training -f Dockerfile.train ."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0ec8cef",
+   "id": "af5bedc7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ac4c29",
+   "id": "dfc140d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6afc76",
+   "id": "64c51ed0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,17 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfaadc69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!SM_MODEL_DIR=\"./data/output\" python main.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e78d6da",
+   "id": "bbe4aafe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +126,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c31120a",
+   "id": "c215caa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!SM_MODEL_DIR=\"./data/output\" python main.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef3b620c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8e61e98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%sh\n",
+    "# Specify an image name\n",
+    "image_name=tensorflow-training\n",
+    "echo \"image_name: ${image_name} ######################\"\n",
+    "\n",
+    "account=$(aws sts get-caller-identity --query Account --output text)\n",
+    "echo \"account: ${account} ######################\"\n",
+    "\n",
+    "# Get the region defined in the current configuration (default to us-west-2 if none defined)\n",
+    "region=$(aws configure get region)\n",
+    "echo \"region: ${region} ######################\"\n",
+    "\n",
+    "fullname=\"${account}.dkr.ecr.${region}.amazonaws.com/${image_name}:latest\"\n",
+    "echo \"fullname: ${fullname} ######################\"\n",
+    "\n",
+    "aws ecr create-repository --repository-name \"${image_name}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da54516f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin  049694889102.dkr.ecr.us-east-1.amazonaws.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14725ace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "016c0133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker push 049694889102.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ce3866",
    "metadata": {},
    "outputs": [],
    "source": []
