--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b249bb32",
+   "id": "f7c9d4dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6db7622f",
+   "id": "d589d947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce5b4e34",
+   "id": "b67fc287",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "701d974c",
+   "id": "688612d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,27 +47,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d1fcc6e",
+   "id": "e8290ff3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin  763104351884.dkr.ecr.us-east-1.amazonaws.com"
+    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 763104351884.dkr.ecr.us-east-1.amazonaws.com"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3191be0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!docker build -t 049694889102.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training -f Dockerfile.train ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af5bedc7",
+   "id": "4b020639",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +67,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc140d8",
+   "id": "37e54d02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker build -t 319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo -f Dockerfile.train ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b6b5061",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f7af67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +100,7 @@
     "hyperparameters={'epochs': 1}\n",
     "\n",
     "estimator=Estimator(\n",
-    "    image_uri='ciao:mondo',\n",
+    "    image_uri='319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo',\n",
     "    role=role,\n",
     "    instance_count=1,\n",
     "    instance_type='local',\n",
@@ -99,14 +109,14 @@
     ")\n",
     "\n",
     "print('##### ESTIMATOR FIT STARTED')\n",
-    "estimator.fit('file://{}/data/input/train.csv'.format(os.getcwd()))\n",
+    "estimator.fit('file://{}/data/input/abalone.data'.format(os.getcwd()))\n",
     "print('##### ESTIMATOR FIT COMPLETED')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64c51ed0",
+   "id": "07acb4da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbe4aafe",
+   "id": "bf15c937",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,27 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c215caa7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!SM_MODEL_DIR=\"./data/output\" python main.py"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef3b620c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.getcwd()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8e61e98",
+   "id": "d14bea14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,26 +152,30 @@
     "region=$(aws configure get region)\n",
     "echo \"region: ${region} ######################\"\n",
     "\n",
-    "fullname=\"${account}.dkr.ecr.${region}.amazonaws.com/${image_name}:latest\"\n",
+    "fullname=\"${account}.dkr.ecr.${region}.amazonaws.com/${image_name}:2.12.0-cpu-py310-pluto-2\"\n",
     "echo \"fullname: ${fullname} ######################\"\n",
     "\n",
-    "aws ecr create-repository --repository-name \"${image_name}\""
+    "aws ecr describe-repositories --repository-names \"${image_name}\"\n",
+    "if [ $? -ne 0 ]\n",
+    "then\n",
+    "aws ecr create-repository --repository-name \"${image_name}\"\n",
+    "fi"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da54516f",
+   "id": "957207f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin  049694889102.dkr.ecr.us-east-1.amazonaws.com"
+    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin  319840978863.dkr.ecr.us-east-1.amazonaws.com"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14725ace",
+   "id": "c50b43b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,17 +185,66 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "016c0133",
+   "id": "4818e9b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!docker push 049694889102.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training"
+    "!docker tag ciao:mondo 319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3ce3866",
+   "id": "b194da58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7c56c22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker push 319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b8e648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker import get_execution_role\n",
+    "from sagemaker.estimator import Estimator\n",
+    "import os\n",
+    "\n",
+    "role=get_execution_role()\n",
+    "\n",
+    "hyperparameters={'epochs': 1}\n",
+    "\n",
+    "estimator=Estimator(\n",
+    "    image_uri='319840978863.dkr.ecr.us-east-1.amazonaws.com/tensorflow-training:mondo',\n",
+    "    role=role,\n",
+    "    instance_count=1,\n",
+    "    instance_type='ml.p2.xlarge',\n",
+    "    hyperparameters=hyperparameters,\n",
+    "    output_path='s3://itsar123-larocca/data/output/'\n",
+    ")\n",
+    "\n",
+    "print('##### ESTIMATOR FIT STARTED')\n",
+    "estimator.fit('s3://itsar123-larocca/data/input/train.csv')\n",
+    "print('##### ESTIMATOR FIT COMPLETED')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09e61268",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -223,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
