--- a/test.ipynb
+++ b/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "691a0abe",
+   "id": "8b68b0e3",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "572309ed",
+   "id": "61ef82f3",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8a8b30a1",
+   "id": "7d6fb245",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "904057af",
+   "id": "f9e8c1f8",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7b57a611",
+   "id": "d959689a",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8bb006c6",
+   "id": "3fac450e",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "50312721",
+   "id": "ba628e9f",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "6a44641a",
+   "id": "5b9e603c",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d2dc7071",
+   "id": "29dbf5f4",
    "metadata": {},
    "outputs": [
     {
@@ -386,8 +386,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7044e095",
+   "execution_count": 39,
+   "id": "cb7cef64",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,175 @@
       "2024-11-04 16:29:13 Starting - Starting the training job...\n",
       "2024-11-04 16:29:26 Starting - Preparing the instances for training...\n",
       "2024-11-04 16:30:08 Downloading - Downloading the training image......\n",
-      "2024-11-04 16:30:54 Training - Training image download completed. Training in progress.."
+      "2024-11-04 16:30:54 Training - Training image download completed. Training in progress..\u001b[34m2024-11-04 16:31:17.194118: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\u001b[0m\n",
+      "\u001b[34mTo enable the following instructions: AVX512F, in other operations, rebuild TensorFlow with the appropriate compiler flags.\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:19,111 sagemaker-training-toolkit INFO     Imported framework sagemaker_tensorflow_container.training\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:19,112 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:19,113 sagemaker-training-toolkit INFO     No Neurons detected (normal if no neurons installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:19,123 sagemaker-training-toolkit INFO     Installing dependencies from requirements.txt:\u001b[0m\n",
+      "\u001b[34m/usr/local/bin/python3.10 -m pip install -r requirements.txt\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: pandas in /usr/local/lib/python3.10/site-packages (from -r requirements.txt (line 1)) (1.5.3)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: numpy in /usr/local/lib/python3.10/site-packages (from -r requirements.txt (line 2)) (1.23.5)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: scikit-learn in /usr/local/lib/python3.10/site-packages (from -r requirements.txt (line 3)) (1.4.0)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: matplotlib in /usr/local/lib/python3.10/site-packages (from -r requirements.txt (line 4)) (3.8.2)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: seaborn in /usr/local/lib/python3.10/site-packages (from -r requirements.txt (line 5)) (0.13.2)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: python-dateutil>=2.8.1 in /usr/local/lib/python3.10/site-packages (from pandas->-r requirements.txt (line 1)) (2.8.2)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/site-packages (from pandas->-r requirements.txt (line 1)) (2024.1)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.10/site-packages (from scikit-learn->-r requirements.txt (line 3)) (1.12.0)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: joblib>=1.2.0 in /usr/local/lib/python3.10/site-packages (from scikit-learn->-r requirements.txt (line 3)) (1.3.2)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/site-packages (from scikit-learn->-r requirements.txt (line 3)) (3.2.0)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 4)) (1.2.0)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 4)) (0.12.1)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 4)) (4.47.2)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 4)) (1.4.5)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 4)) (23.2)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: pillow>=8 in /usr/local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 4)) (10.2.0)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/site-packages (from matplotlib->-r requirements.txt (line 4)) (3.1.1)\u001b[0m\n",
+      "\u001b[34mRequirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas->-r requirements.txt (line 1)) (1.16.0)\u001b[0m\n",
+      "\u001b[34mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+      "\u001b[34m[notice] A new release of pip is available: 23.3.2 -> 24.3.1\u001b[0m\n",
+      "\u001b[34m[notice] To update, run: pip install --upgrade pip\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,241 sagemaker-training-toolkit INFO     Waiting for the process to finish and give a return code.\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,241 sagemaker-training-toolkit INFO     Done waiting for a return code. Received 0 from exiting process.\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,242 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,242 sagemaker-training-toolkit INFO     No Neurons detected (normal if no neurons installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,253 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,254 sagemaker-training-toolkit INFO     No Neurons detected (normal if no neurons installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,264 sagemaker-training-toolkit INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,265 sagemaker-training-toolkit INFO     No Neurons detected (normal if no neurons installed)\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:21,276 sagemaker-training-toolkit INFO     Invoking user script\u001b[0m\n",
+      "\u001b[34mTraining Env:\u001b[0m\n",
+      "\u001b[34m{\n",
+      "    \"additional_framework_parameters\": {},\n",
+      "    \"channel_input_dirs\": {\n",
+      "        \"training\": \"/opt/ml/input/data/training\"\n",
+      "    },\n",
+      "    \"current_host\": \"algo-1\",\n",
+      "    \"current_instance_group\": \"homogeneousCluster\",\n",
+      "    \"current_instance_group_hosts\": [\n",
+      "        \"algo-1\"\n",
+      "    ],\n",
+      "    \"current_instance_type\": \"ml.c5.4xlarge\",\n",
+      "    \"distribution_hosts\": [],\n",
+      "    \"distribution_instance_groups\": [],\n",
+      "    \"framework_module\": \"sagemaker_tensorflow_container.training:main\",\n",
+      "    \"hosts\": [\n",
+      "        \"algo-1\"\n",
+      "    ],\n",
+      "    \"hyperparameters\": {\n",
+      "        \"epochs\": 10\n",
+      "    },\n",
+      "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
+      "    \"input_data_config\": {\n",
+      "        \"training\": {\n",
+      "            \"TrainingInputMode\": \"File\",\n",
+      "            \"S3DistributionType\": \"FullyReplicated\",\n",
+      "            \"RecordWrapperType\": \"None\"\n",
+      "        }\n",
+      "    },\n",
+      "    \"input_dir\": \"/opt/ml/input\",\n",
+      "    \"instance_groups\": [\n",
+      "        \"homogeneousCluster\"\n",
+      "    ],\n",
+      "    \"instance_groups_dict\": {\n",
+      "        \"homogeneousCluster\": {\n",
+      "            \"instance_group_name\": \"homogeneousCluster\",\n",
+      "            \"instance_type\": \"ml.c5.4xlarge\",\n",
+      "            \"hosts\": [\n",
+      "                \"algo-1\"\n",
+      "            ]\n",
+      "        }\n",
+      "    },\n",
+      "    \"is_hetero\": false,\n",
+      "    \"is_master\": true,\n",
+      "    \"is_modelparallel_enabled\": null,\n",
+      "    \"is_smddpmprun_installed\": false,\n",
+      "    \"is_smddprun_installed\": false,\n",
+      "    \"job_name\": \"tensorflow-training-2024-11-04-16-29-11-763\",\n",
+      "    \"log_level\": 20,\n",
+      "    \"master_hostname\": \"algo-1\",\n",
+      "    \"model_dir\": \"/opt/ml/model\",\n",
+      "    \"module_dir\": \"/opt/ml/code\",\n",
+      "    \"module_name\": \"main\",\n",
+      "    \"network_interface_name\": \"eth0\",\n",
+      "    \"num_cpus\": 16,\n",
+      "    \"num_gpus\": 0,\n",
+      "    \"num_neurons\": 0,\n",
+      "    \"output_data_dir\": \"/opt/ml/output/data\",\n",
+      "    \"output_dir\": \"/opt/ml/output\",\n",
+      "    \"output_intermediate_dir\": \"/opt/ml/output/intermediate\",\n",
+      "    \"resource_config\": {\n",
+      "        \"current_host\": \"algo-1\",\n",
+      "        \"current_instance_type\": \"ml.c5.4xlarge\",\n",
+      "        \"current_group_name\": \"homogeneousCluster\",\n",
+      "        \"hosts\": [\n",
+      "            \"algo-1\"\n",
+      "        ],\n",
+      "        \"instance_groups\": [\n",
+      "            {\n",
+      "                \"instance_group_name\": \"homogeneousCluster\",\n",
+      "                \"instance_type\": \"ml.c5.4xlarge\",\n",
+      "                \"hosts\": [\n",
+      "                    \"algo-1\"\n",
+      "                ]\n",
+      "            }\n",
+      "        ],\n",
+      "        \"network_interface_name\": \"eth0\"\n",
+      "    },\n",
+      "    \"user_entry_point\": \"main.py\"\u001b[0m\n",
+      "\u001b[34m}\u001b[0m\n",
+      "\u001b[34mEnvironment variables:\u001b[0m\n",
+      "\u001b[34mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
+      "\u001b[34mSM_NETWORK_INTERFACE_NAME=eth0\u001b[0m\n",
+      "\u001b[34mSM_HPS={\"epochs\":10}\u001b[0m\n",
+      "\u001b[34mSM_USER_ENTRY_POINT=main.py\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_PARAMS={}\u001b[0m\n",
+      "\u001b[34mSM_RESOURCE_CONFIG={\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.c5.4xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.c5.4xlarge\"}],\"network_interface_name\":\"eth0\"}\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DATA_CONFIG={\"training\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}}\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DATA_DIR=/opt/ml/output/data\u001b[0m\n",
+      "\u001b[34mSM_CHANNELS=[\"training\"]\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_HOST=algo-1\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_INSTANCE_TYPE=ml.c5.4xlarge\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_INSTANCE_GROUP=homogeneousCluster\u001b[0m\n",
+      "\u001b[34mSM_CURRENT_INSTANCE_GROUP_HOSTS=[\"algo-1\"]\u001b[0m\n",
+      "\u001b[34mSM_INSTANCE_GROUPS=[\"homogeneousCluster\"]\u001b[0m\n",
+      "\u001b[34mSM_INSTANCE_GROUPS_DICT={\"homogeneousCluster\":{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.c5.4xlarge\"}}\u001b[0m\n",
+      "\u001b[34mSM_DISTRIBUTION_INSTANCE_GROUPS=[]\u001b[0m\n",
+      "\u001b[34mSM_IS_HETERO=false\u001b[0m\n",
+      "\u001b[34mSM_MODULE_NAME=main\u001b[0m\n",
+      "\u001b[34mSM_LOG_LEVEL=20\u001b[0m\n",
+      "\u001b[34mSM_FRAMEWORK_MODULE=sagemaker_tensorflow_container.training:main\u001b[0m\n",
+      "\u001b[34mSM_INPUT_DIR=/opt/ml/input\u001b[0m\n",
+      "\u001b[34mSM_INPUT_CONFIG_DIR=/opt/ml/input/config\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_DIR=/opt/ml/output\u001b[0m\n",
+      "\u001b[34mSM_NUM_CPUS=16\u001b[0m\n",
+      "\u001b[34mSM_NUM_GPUS=0\u001b[0m\n",
+      "\u001b[34mSM_NUM_NEURONS=0\u001b[0m\n",
+      "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=/opt/ml/code\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"training\":\"/opt/ml/input/data/training\"},\"current_host\":\"algo-1\",\"current_instance_group\":\"homogeneousCluster\",\"current_instance_group_hosts\":[\"algo-1\"],\"current_instance_type\":\"ml.c5.4xlarge\",\"distribution_hosts\":[],\"distribution_instance_groups\":[],\"framework_module\":\"sagemaker_tensorflow_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"epochs\":10},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"training\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"instance_groups\":[\"homogeneousCluster\"],\"instance_groups_dict\":{\"homogeneousCluster\":{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.c5.4xlarge\"}},\"is_hetero\":false,\"is_master\":true,\"is_modelparallel_enabled\":null,\"is_smddpmprun_installed\":false,\"is_smddprun_installed\":false,\"job_name\":\"tensorflow-training-2024-11-04-16-29-11-763\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"/opt/ml/code\",\"module_name\":\"main\",\"network_interface_name\":\"eth0\",\"num_cpus\":16,\"num_gpus\":0,\"num_neurons\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.c5.4xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.c5.4xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"main.py\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ARGS=[\"--epochs\",\"10\"]\u001b[0m\n",
+      "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
+      "\u001b[34mSM_CHANNEL_TRAINING=/opt/ml/input/data/training\u001b[0m\n",
+      "\u001b[34mSM_HP_EPOCHS=10\u001b[0m\n",
+      "\u001b[34mPYTHONPATH=/opt/ml/code:/usr/local/bin:/usr/local/lib/python310.zip:/usr/local/lib/python3.10:/usr/local/lib/python3.10/lib-dynload:/usr/local/lib/python3.10/site-packages:/usr/local/lib/python3.10/site-packages/smdebug-1.0.33-py3.10.egg:/usr/local/lib/python3.10/site-packages/pyinstrument-3.4.2-py3.10.egg:/usr/local/lib/python3.10/site-packages/pyinstrument_cext-0.2.4-py3.10-linux-x86_64.egg\u001b[0m\n",
+      "\u001b[34mInvoking script with the following command:\u001b[0m\n",
+      "\u001b[34m/usr/local/bin/python3.10 main.py --epochs 10\u001b[0m\n",
+      "\u001b[34mExtension horovod.torch has not been built: /usr/local/lib/python3.10/site-packages/horovod/torch/mpi_lib_v2.cpython-310-x86_64-linux-gnu.so not found\u001b[0m\n",
+      "\u001b[34mIf this is not expected, reinstall Horovod with HOROVOD_WITH_PYTORCH=1 to debug the build error.\u001b[0m\n",
+      "\u001b[34mWarning! MPI libs are missing, but python applications are still available.\u001b[0m\n",
+      "\u001b[34mLa colonna target 'sy_dist' non è presente nei dati.\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:25,074 sagemaker-training-toolkit INFO     Waiting for the process to finish and give a return code.\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:25,074 sagemaker-training-toolkit INFO     Done waiting for a return code. Received 0 from exiting process.\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:25,074 sagemaker_tensorflow_container.training WARNING  Your model will NOT be servable with SageMaker TensorFlow Serving container. The model artifact was not saved in the TensorFlow SavedModel directory structure:\u001b[0m\n",
+      "\u001b[34mhttps://www.tensorflow.org/guide/saved_model#structure_of_a_savedmodel_directory\u001b[0m\n",
+      "\u001b[34m2024-11-04 16:31:25,075 sagemaker-training-toolkit INFO     Reporting training SUCCESS\u001b[0m\n",
+      "\n",
+      "2024-11-04 16:31:38 Uploading - Uploading generated training model\n",
+      "2024-11-04 16:31:38 Completed - Training job completed\n",
+      "Training seconds: 104\n",
+      "Billable seconds: 104\n",
+      "##### ADDDESTRAMENTO COMPLETATO #####\n"
      ]
     }
    ],
@@ -455,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "befb9128",
+   "id": "a2fa90c0",
    "metadata": {},
    "outputs": [],
    "source": []
