--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e21a2ec",
+   "id": "3b1d513a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30d9d11c",
+   "id": "9643a30f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e854ddf",
+   "id": "e5ff24dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9b4469e",
+   "id": "fb38cb27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72370c2a",
+   "id": "6ea479e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0def173",
+   "id": "77add074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32e4f417",
+   "id": "4465babb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb676dae",
+   "id": "03308dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3f5450a",
+   "id": "3cacf6ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f91fa67",
+   "id": "ebb8198f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9980aac",
+   "id": "707d551c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c042f5",
+   "id": "a911bb13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634c4131",
+   "id": "cac07b7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c5faef",
+   "id": "86671d42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e4de475",
+   "id": "2618306b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d8f6c8",
+   "id": "7988fcf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61c60687",
+   "id": "fccb8e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c09479e5",
+   "id": "267e831f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a76f67a",
+   "id": "8fb1cbae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098f0f1c",
+   "id": "89be0386",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffc56422",
+   "id": "0ada7166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cf4b386",
+   "id": "2a68fc00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08da3e0c",
+   "id": "316a1f99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1e1a284",
+   "id": "9984c24e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f2ce2a",
+   "id": "0c5517b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a51b55d",
+   "id": "4a4d09dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14b4aca8",
+   "id": "259e0aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fc5ebc0",
+   "id": "4efd1979",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46113e61",
+   "id": "1ac16ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c472db07",
+   "id": "28174ac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dac98be8",
+   "id": "e0846755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2564ff5e",
+   "id": "18cb998f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,8 +439,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "6e8b913c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created EndpointConfig: arn:aws:sagemaker:us-east-1:648633553332:endpoint-config/la-mia-prima-api-inferenza-config\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create an endpoint config name. Here we create one based on the date  \n",
+    "# so it we can search endpoints based on creation time.\n",
+    "endpoint_config_name = 'la-mia-prima-api-inferenza-config'\n",
+    "\n",
+    "instance_type = 'ml.p2.xlarge'\n",
+    "\n",
+    "endpoint_config_response = sagemaker_client.create_endpoint_config(\n",
+    "    EndpointConfigName=endpoint_config_name,\n",
+    "    # You will specify this name in a CreateEndpoint request.\n",
+    "    # List of ProductionVariant objects, one for each model that you want to host at this endpoint.\n",
+    "    ProductionVariants=[\n",
+    "        {\n",
+    "            \"VariantName\": \"variant1\", # The name of the production variant.\n",
+    "            \"ModelName\": model_name,\n",
+    "            \"InstanceType\": instance_type, # Specify the compute instance type.\n",
+    "            \"InitialInstanceCount\": 1 # Number of instances to launch initially.\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(f\"Created EndpointConfig: {endpoint_config_response['EndpointConfigArn']}\")\n",
+    "\n",
+    "# The name of the endpoint. The name must be unique within an AWS Region in your AWS account.\n",
+    "endpoint_name = 'la-mia-prima-api-inferenza'\n",
+    "\n",
+    "create_endpoint_response = sagemaker_client.create_endpoint(\n",
+    "                                            EndpointName=endpoint_name, \n",
+    "                                            EndpointConfigName=endpoint_config_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b5687e63",
+   "id": "bfc6bc4f",
    "metadata": {},
    "outputs": [],
    "source": []
