--- a/Esame/Untitled.ipynb
+++ b/Esame/Untitled.ipynb
@@ -3,7 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7704335",
+   "id": "2bd1ad90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('Esame')  # Sposta la working directory nella cartella \"Esame\"\n",
+    "print(\"Nuova directory corrente:\", os.getcwd())\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "print(\"Files in current directory:\", os.listdir())\n",
+    "print(\"Current working directory:\", os.getcwd())\n",
+    "# Installa le librerie specificate in requirements_inference.txt\n",
+    "!pip install -r requirements_inference.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6216ce70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +43,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c17dc15f",
+   "id": "9570dbf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zipfile\n",
+    "\n",
+    "# Configura i dettagli di S3\n",
+    "bucket_name = 'itsar123-bianchini'  # Nome del tuo bucket S3\n",
+    "s3_zip_path = 'train.zip'  # Percorso del file .zip su S3\n",
+    "local_zip_path = 'train.zip'  # Percorso locale dove salvare il file .zip\n",
+    "local_path = 'data'  # Directory locale per estrarre i dati\n",
+    "s3_prefix = 'train'  # Percorso su S3 dove caricare la cartella estratta (opzionale)\n",
+    "\n",
+    "# Step 1: Scaricare il file zip da S3\n",
+    "s3 = boto3.client('s3')\n",
+    "s3.download_file(bucket_name, s3_zip_path, local_zip_path)\n",
+    "print(f\"File {s3_zip_path} scaricato da S3 e salvato come {local_zip_path}\")\n",
+    "\n",
+    "# Step 2: Decomprimere il file zip\n",
+    "os.makedirs(local_path, exist_ok=True)  # Crea la directory se non esiste\n",
+    "with zipfile.ZipFile(local_zip_path, 'r') as zip_ref:\n",
+    "    zip_ref.extractall(local_path)\n",
+    "print(f\"File zip estratto nella directory: {local_path}\")\n",
+    "\n",
+    "# Step 3: (Opzionale) Caricare la cartella estratta su S3\n",
+    "# for root, dirs, files in os.walk(local_path):\n",
+    "#     for file in files:\n",
+    "#         local_file_path = os.path.join(root, file)\n",
+    "#         s3_file_path = os.path.relpath(local_file_path, local_path)\n",
+    "#         s3.upload_file(local_file_path, bucket_name, os.path.join(s3_prefix, s3_file_path))\n",
+    "# print(\"Cartella estratta caricata su S3.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b14c65ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,15 +92,15 @@
     "sagemaker_role = get_execution_role()\n",
     "\n",
     "# Definizione di alcuni parametri\n",
-    "bucket_name = 'il_tuo_bucket'  # Sostituisci con il nome del tuo bucket S3\n",
-    "s3_prefix = 'path/alla/cartella/train'  # Sostituisci con il percorso della cartella 'train' su S3\n",
+    "bucket_name = 'itsar123-bianchini'  # Sostituisci con il nome del tuo bucket S3\n",
+    "s3_prefix = 'train'  # Sostituisci con il percorso della cartella 'train' su S\n",
     "data_dir = 'data'\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdae7617",
+   "id": "41817a16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94c4521",
+   "id": "0056b10b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b87cfe4",
+   "id": "29a378b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b0b135a",
+   "id": "e1adbd32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b85d77bb",
+   "id": "a1c6a72b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09588383",
+   "id": "c42fe428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35aac942",
+   "id": "a70e2594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86f1b674",
+   "id": "bc415e00",
    "metadata": {},
    "outputs": [],
    "source": [
