--- a/Esame/Untitled.ipynb
+++ b/Esame/Untitled.ipynb
@@ -3,12 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bd1ad90",
+   "id": "b00b5b35",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.chdir('Esame')  # Sposta la working directory nella cartella \"Esame\"\n",
+    "#os.chdir('Esame')  # Sposta la working directory nella cartella \"Esame\"\n",
     "print(\"Nuova directory corrente:\", os.getcwd())\n",
     "\n",
     "\n",
@@ -21,10 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "6216ce70",
+   "execution_count": 36,
+   "id": "b2e17495",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference:2.12.1-cpu'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Importazione delle librerie necessarie\n",
     "import boto3\n",
@@ -37,13 +48,16 @@
     "import pickle\n",
     "import json\n",
     "import datetime\n",
-    "from time import gmtime, strftime\n"
+    "from time import gmtime, strftime\n",
+    "\n",
+    "from sagemaker import image_uris\n",
+    "image_uris.retrieve(framework='tensorflow',region='us-east-1',version='2.12.1',image_scope='inference',instance_type='ml.c5.4xlarge')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9570dbf4",
+   "id": "a69ef8c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14c65ff",
+   "id": "34b35659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41817a16",
+   "id": "6d323194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0056b10b",
+   "id": "ea46d2ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a378b0",
+   "id": "d87015d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +184,9 @@
     "model.add(layers.Conv2D(128, (3, 3), activation='relu'))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
     "model.add(layers.Flatten())\n",
+    "model.add(layers.Dropout(0.5))\n",
     "model.add(layers.Dense(512, activation='relu'))\n",
+    "model.add(layers.Dropout(0.5))\n",
     "model.add(layers.Dense(train_generator.num_classes, activation='softmax'))\n",
     "\n",
     "# Compila il modello\n",
@@ -179,7 +195,7 @@
     "              metrics=['accuracy'])\n",
     "\n",
     "# Allena il modello\n",
-    "epochs = 10  # Puoi aumentare il numero di epoche se necessario\n",
+    "epochs = 4  # Puoi aumentare il numero di epoche se necessario\n",
     "model.fit(\n",
     "    train_generator,\n",
     "    epochs=epochs,\n",
@@ -193,7 +209,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1adbd32",
+   "id": "56c704d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Passo 2: Salva il modello nel formato .keras\n",
+    "model.save('model.keras', save_format='keras')\n",
+    "print(\"Il modello è stato salvato come .keras.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1642ed47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,8 +233,243 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "267ff12d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "image_name: tensorflow-inference ######################\n",
+      "account: 648633553332 ######################\n",
+      "region: us-east-1 ######################\n",
+      "fullname: 648633553332.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference:2.12.0-cpu-py310-pluto-2 ######################\n",
+      "{\n",
+      "    \"repositories\": [\n",
+      "        {\n",
+      "            \"repositoryArn\": \"arn:aws:ecr:us-east-1:648633553332:repository/tensorflow-inference\",\n",
+      "            \"registryId\": \"648633553332\",\n",
+      "            \"repositoryName\": \"tensorflow-inference\",\n",
+      "            \"repositoryUri\": \"648633553332.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference\",\n",
+      "            \"createdAt\": 1731932483.464,\n",
+      "            \"imageTagMutability\": \"MUTABLE\",\n",
+      "            \"imageScanningConfiguration\": {\n",
+      "                \"scanOnPush\": false\n",
+      "            },\n",
+      "            \"encryptionConfiguration\": {\n",
+      "                \"encryptionType\": \"AES256\"\n",
+      "            }\n",
+      "        }\n",
+      "    ]\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EXTRA\n",
+    "\n",
+    "%%sh\n",
+    "# Specify an image name\n",
+    "image_name=tensorflow-inference\n",
+    "echo \"image_name: ${image_name} ######################\"\n",
+    "\n",
+    "account=$(aws sts get-caller-identity --query Account --output text)\n",
+    "echo \"account: ${account} ######################\"\n",
+    "\n",
+    "# Get the region defined in the current configuration (default to us-west-2 if none defined)\n",
+    "region=$(aws configure get region)\n",
+    "echo \"region: ${region} ######################\"\n",
+    "\n",
+    "fullname=\"${account}.dkr.ecr.${region}.amazonaws.com/${image_name}:2.12.0-cpu-py310-pluto-2\"\n",
+    "echo \"fullname: ${fullname} ######################\"\n",
+    "\n",
+    "aws ecr describe-repositories --repository-names \"${image_name}\"\n",
+    "if [ $? -ne 0 ]\n",
+    "then\n",
+    "aws ecr create-repository --repository-name \"${image_name}\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "3bf40a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING! Your password will be stored unencrypted in /home/ec2-user/.docker/config.json.\n",
+      "Configure a credential helper to remove this warning. See\n",
+      "https://docs.docker.com/engine/reference/commandline/login/#credentials-store\n",
+      "\n",
+      "Login Succeeded\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EXTRA\n",
+    "\n",
+    "!aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "683d8839",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING! Your password will be stored unencrypted in /home/ec2-user/.docker/config.json.\n",
+      "Configure a credential helper to remove this warning. See\n",
+      "https://docs.docker.com/engine/reference/commandline/login/#credentials-store\n",
+      "\n",
+      "Login Succeeded\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EXTRA\n",
+    "\n",
+    "!aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 648633553332.dkr.ecr.us-east-1.amazonaws.com"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a1c6a72b",
+   "id": "d41cc565",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#EXTRA\n",
+    "!docker build -t card-classification-inference ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b404bb10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"imageIds\": []\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EXTRA\n",
+    "!aws ecr list-images --repository-name tensorflow-inference --region us-east-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "07b274ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "REPOSITORY   TAG       IMAGE ID   CREATED   SIZE\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EXTRA\n",
+    "!docker images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7398f67b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1A\u001b[1B\u001b[0G\u001b[?25l[+] Building 0.0s (0/1)                                          docker:default\n",
+      "\u001b[?25h\u001b[1A\u001b[0G\u001b[?25l[+] Building 0.0s (2/2) FINISHED                                 docker:default\n",
+      "\u001b[34m => [internal] load build definition from Dockerfile.inference             0.0s\n",
+      "\u001b[0m\u001b[34m => => transferring dockerfile: 628B                                       0.0s\n",
+      "\u001b[0m\u001b[31m => ERROR [internal] load metadata for 763104351884.dkr.ecr.us-east-1.ama  0.0s\n",
+      "\u001b[0m\u001b[?25h------\n",
+      " > [internal] load metadata for 763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference:2.12.1-cpu:\n",
+      "------\n",
+      "Dockerfile.inference:1\n",
+      "--------------------\n",
+      "   1 | >>> FROM 763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference:2.12.1-cpu\n",
+      "   2 |     \n",
+      "   3 |     # Aggiungi i requisiti\n",
+      "--------------------\n",
+      "ERROR: failed to solve: 763104351884.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference:2.12.1-cpu: unexpected status from HEAD request to https://763104351884.dkr.ecr.us-east-1.amazonaws.com/v2/tensorflow-inference/manifests/2.12.1-cpu: 401 Unauthorized\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EXTRA\n",
+    "\n",
+    "#Codice build è univoco per persona\n",
+    "!docker build -t 648633553332.dkr.ecr.us-east-1.amazonaws.com/card-classification-inference -f Dockerfile.inference ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5bfd1677",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1A\u001b[1B\u001b[0G\u001b[?25l[+] Building 0.0s (0/1)                                          docker:default\n",
+      "\u001b[?25h\u001b[1A\u001b[0G\u001b[?25l[+] Building 0.1s (3/3)                                          docker:default\n",
+      "\u001b[34m => [internal] load build definition from Dockerfile.inference             0.0s\n",
+      "\u001b[0m\u001b[34m => => transferring dockerfile: 617B                                       0.0s\n",
+      "\u001b[0m\u001b[31m => ERROR [internal] load metadata for 648633553332.dkr.ecr.us-east-1.ama  0.1s\n",
+      "\u001b[0m\u001b[34m => [auth] sharing credentials for 648633553332.dkr.ecr.us-east-1.amazona  0.0s\n",
+      "\u001b[0m\u001b[?25h\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[1A\u001b[0G\u001b[?25l[+] Building 0.2s (3/3) FINISHED                                 docker:default\n",
+      "\u001b[34m => [internal] load build definition from Dockerfile.inference             0.0s\n",
+      "\u001b[0m\u001b[34m => => transferring dockerfile: 617B                                       0.0s\n",
+      "\u001b[0m\u001b[31m => ERROR [internal] load metadata for 648633553332.dkr.ecr.us-east-1.ama  0.1s\n",
+      "\u001b[0m\u001b[34m => [auth] sharing credentials for 648633553332.dkr.ecr.us-east-1.amazona  0.0s\n",
+      "\u001b[0m\u001b[?25h------\n",
+      " > [internal] load metadata for 648633553332.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference:latest:\n",
+      "------\n",
+      "Dockerfile.inference:1\n",
+      "--------------------\n",
+      "   1 | >>> FROM 648633553332.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference\n",
+      "   2 |     \n",
+      "   3 |     # Aggiungi i requisiti\n",
+      "--------------------\n",
+      "ERROR: failed to solve: 648633553332.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference: 648633553332.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference:latest: not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "#EXTRA\n",
+    "\n",
+    "#Codice build è univoco per persona\n",
+    "!docker build -t 648633553332.dkr.ecr.us-east-1.amazonaws.com/tensorflow-inference -f Dockerfile.inference ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d216ab7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c42fe428",
+   "id": "3a106dc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,8 +553,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "ed289b44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using default tag: latest\n",
+      "The push refers to repository [648633553332.dkr.ecr.us-east-1.amazonaws.com/card-classification-inference]\n",
+      "An image does not exist locally with the tag: 648633553332.dkr.ecr.us-east-1.amazonaws.com/card-classification-inference\n"
+     ]
+    }
+   ],
+   "source": [
+    "# EXTRA\n",
+    "!docker push 648633553332.dkr.ecr.us-east-1.amazonaws.com/card-classification-inference"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a70e2594",
+   "id": "3eb46625",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc415e00",
+   "id": "15b42bf5",
    "metadata": {},
    "outputs": [],
    "source": [
